<resources>
    <string name="app_name">Mini Card Game</string>
    <string name="play">PLAY</string>
    <string name="card_1_image_display">Card 1 Image Display</string>
    <string name="card_2_image_display">Card 2 Image Display</string>
    <string name="total_points">Total Points</string>
    <string name="_0">0</string>
    <string name="round">Round #</string>
    <string name="background">background</string>
    <string name="button_used_to_restart_game">Button used to restart game</string>
    <string name="app_background">App Background</string>
    <string name="restart_game_button">Restart Game button</string>
    <string name="reset">RESET</string>
</resources>